# stm32h723zg_FreeRTOS

./: CMakeLists.txt  STM32H723ZG.bat  STM32H723ZG.cmake  STM32H723ZGTx_FLASH.ld
Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Src/: stm32h7xx_hal_msp.c  stm32h7xx_it.c
Drivers/CMSIS/Device/ST/STM32H7xx/Include/: stm32h7xx.h
